--- a/Canvas/index.html
+++ b/Canvas/index.html
@@ -8,6 +8,7 @@
     <title>Dynamic rectangle</title>
 </head>
 <body>
+    <div class="title">Динамичный прямоугольник</div>
     <canvas id="canvas" width="800" height="600"></canvas>
     <nav class="context-menu">
         <ul class="context-menu__items">
@@ -29,5 +30,8 @@
         </ul>
       </nav>
     <script src="dyn_rectangle.js"></script>
+    <div class="descr">
+        *Нажмите на правую кнопку мыши (внутри фигуры) для вызова контекстного меню.
+    </div>
 </body>
 </html>
